@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 0.99_28 Not Released
+ - Fix keeping scroll at bottom in Firefox #324
  - Will not mark message as "highlight" if sent by yourself
 
 0.99_27 2017-03-01T23:20:11+0100
